<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.JoinRoomFragment">

    <data>

        <variable
            name="viewmodel"
            type="by.bsuir.firebasegame.viewmodels.RoomViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_game_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            app:errorEnabled="true"
            app:errorText="@{viewmodel.errorJoinRoom}"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toTopOf="@+id/button_join"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_join_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_room_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/room_id" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/join"
            android:onClick="@{() -> viewmodel.checkRoomExistence(editTextRoomId.getText().toString())}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputLayout_game_id" />

        <TextView
            android:id="@+id/textView_join_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_existing_game_room"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@+id/inputLayout_game_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.44"
            app:layout_constraintVertical_chainStyle="packed" />

        <ProgressBar
            android:id="@+id/progressBar_join"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:visibility="@{viewmodel.progress?View.VISIBLE:View.GONE}"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_join" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>