<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="by.bsuir.firebasegame.viewmodels.EditViewModel" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.EditFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView_edit"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="24dp"
            app:civ_border_width="1dp"
            android:src="@drawable/unknown"
            app:layout_constraintBottom_toTopOf="@id/textInput_layout_nickname_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_avatar_title_edit" />

        <Button
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/choose_avatar_button"
            android:onClick="@{() -> viewmodel.changeAvatar()}"
            app:layout_constraintBottom_toBottomOf="@+id/circleImageView_edit"
            app:layout_constraintEnd_toEndOf="@+id/circleImageView_edit"
            app:layout_constraintStart_toStartOf="@+id/circleImageView_edit"
            app:layout_constraintTop_toTopOf="@id/circleImageView_edit"/>

        <TextView
            android:id="@+id/textView_avatar_title_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_avatar"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@+id/circleImageView_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput_layout_nickname_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:errorEnabled="true"
            app:errorText="@{viewmodel.nicknameErrorMessage}"
            app:layout_constraintBottom_toTopOf="@+id/button_submit_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView_edit">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewmodel.nickname}"
                android:background="@android:color/transparent"
                android:hint="@string/nickname" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_submit_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:enabled="@{!(viewmodel.progressAvatar || viewmodel.progressProfile)}"
            android:onClick="@{() -> viewmodel.createOrEditProfile()}"
            android:text="@string/submit"
            app:layout_constraintBottom_toTopOf="@+id/button_gravatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInput_layout_nickname_edit" />

        <ProgressBar
            android:id="@+id/progressBar_edit"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewmodel.progressAvatar || viewmodel.progressProfile? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_gravatar" />

        <Button
            android:id="@+id/button_gravatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> viewmodel.useGravatar()}"
            android:text="@string/use_gravatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_submit_edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>